firmware/lib/control-table/tests/ui/unknown_field_key.rs
use control_table::Block;

#[repr(C)]
#[derive(Block)]
struct UnknownKey {
    #[ct_field(nope = 1)]
    x: u8,
}

fn main() {}
